--- a/src/main/resources/templates/Entity.java.vm
+++ b/src/main/resources/templates/Entity.java.vm
@@ -1,4 +1,4 @@
-package org.github.zuuuyao.entity.${moduleName};
+package ${packageName};
 
 import com.baomidou.mybatisplus.annotation.TableName;
 import lombok.*;
