--- a/src/main/resources/templates/EditInputDTO.java.vm
+++ b/src/main/resources/templates/EditInputDTO.java.vm
@@ -34,6 +34,7 @@ public class ${className} extends BaseDTO {
     /**
      * ${column.columnComment}
      */
+    @Schema(description = "${column.columnComment}")
     private ${column.attrType} ${column.attrName};
 
     #end
