feat: (代码生成): 补充后端代码生成

--- a/src/main/resources/templates/Service.java.vm
+++ b/src/main/resources/templates/Service.java.vm
@@ -15,11 +15,11 @@ import ${entityVOPackageName}.${entityVO};
  */
 public interface ${className} {
 
-    Boolean addUser(${addInputDTO} inputDTO);
+    Boolean add${domainName}(${addInputDTO} inputDTO);
 
-    Boolean delUser(BaseManyLongIdInputDTO inputDTO);
+    Boolean del${domainName}(BaseManyLongIdInputDTO inputDTO);
 
-    Boolean editUser(${editInputDTO} inputDTO);
+    Boolean edit${domainName}(${editInputDTO} inputDTO);
 
     Page<${entityVO}> pageQueryList(${queryPageInputDTO} inputDTO);
 }
