--- a/src/main/resources/templates/Controller.java.vm
+++ b/src/main/resources/templates/Controller.java.vm
@@ -49,21 +49,21 @@ public class ${className} {
     @Operation(summary = "添加${tab}", description = "添加${tab}接口")
     @ApiResponse(responseCode = "200", description = "OK")
     @PostMapping(value = "/addUser", produces = MediaType.APPLICATION_JSON_VALUE)
-    public Boolean addUser(@RequestBody @Validated ${addInputDTO} inputDTO) {
-        return ${service}.addUser(inputDTO);
+    public Boolean add${domainName}(@RequestBody @Validated ${addInputDTO} inputDTO) {
+        return ${service}.add${domainName}(inputDTO);
     }
 
     @Operation(summary = "删除${tab}", description = "根据id删除接口")
     @ApiResponse(responseCode = "200", description = "OK")
     @DeleteMapping(value = "/delUser", produces = MediaType.APPLICATION_JSON_VALUE)
-    public Boolean delUser(@RequestBody @Validated BaseManyLongIdInputDTO inputDTO) {
-        return ${service}.delUser(inputDTO);
+    public Boolean del${domainName}(@RequestBody @Validated BaseManyLongIdInputDTO inputDTO) {
+        return ${service}.del${domainName}(inputDTO);
     }
 
     @Operation(summary = "编辑${tab}", description = "编辑${tab}接口")
     @ApiResponse(responseCode = "200", description = "OK")
     @PatchMapping(value = "/editUser", produces = MediaType.APPLICATION_JSON_VALUE)
-    public Boolean addUser(@RequestBody @Validated ${editInputDTO} inputDTO) {
-        return ${service}.editUser(inputDTO);
+    public Boolean add${domainName}(@RequestBody @Validated ${editInputDTO} inputDTO) {
+        return ${service}.edit${domainName}(inputDTO);
     }
 }
