--- a/src/main/resources/templates/Service.java.vm
+++ b/src/main/resources/templates/Service.java.vm
@@ -6,7 +6,21 @@ import ${addInputDTOPackageName}.${addInputDTO};
 import ${editInputDTOPackageName}.${editInputDTO};
 import ${queryPageInputDTOPackageName}.${queryPageInputDTO};
 import ${entityVOPackageName}.${entityVO};
-
+#if(${hasBigDecimal})
+import java.math.BigDecimal;
+#end
+#if(${hasLocalDateTime})
+import java.time.LocalDateTime;
+#end
+#if(${hasLocalDate})
+import java.time.LocalDate;
+#end
+#if(${hasLocalTime})
+import java.time.LocalTime;
+#end
+#if(${hasDate})
+import java.util.Date;
+#end
 /**
  * ${comments}
  * @Desc Created by Velocity Generate.
