--- a/src/main/resources/templates/EditInputDTO.java.vm
+++ b/src/main/resources/templates/EditInputDTO.java.vm
@@ -10,6 +10,15 @@ import java.math.BigDecimal;
 #if(${hasLocalDateTime})
 import java.time.LocalDateTime;
 #end
+#if(${hasLocalDate})
+import java.time.LocalDate;
+#end
+#if(${hasLocalTime})
+import java.time.LocalTime;
+#end
+#if(${hasDate})
+import java.util.Date;
+#end
 
 /**
  * ${comments}
