--- a/src/main/resources/templates/ServiceImpl.java.vm
+++ b/src/main/resources/templates/ServiceImpl.java.vm
@@ -15,7 +15,21 @@ import ${editInputDTOPackageName}.${editInputDTO};
 import ${queryPageInputDTOPackageName}.${queryPageInputDTO};
 import ${entityVOPackageName}.${entityVO};
 import org.springframework.stereotype.Service;
-
+#if(${hasBigDecimal})
+import java.math.BigDecimal;
+#end
+#if(${hasLocalDateTime})
+import java.time.LocalDateTime;
+#end
+#if(${hasLocalDate})
+import java.time.LocalDate;
+#end
+#if(${hasLocalTime})
+import java.time.LocalTime;
+#end
+#if(${hasDate})
+import java.util.Date;
+#end
 /**
  * ${comments}
  * @Desc Created by Velocity Generate.
