docs(生成代码): 生成的代码添加注释

--- a/src/main/resources/templates/Index.vue.vm
+++ b/src/main/resources/templates/Index.vue.vm
@@ -101,7 +101,7 @@ import { NButton, NDataTable } from 'naive-ui'
 import api from './api.js'
 import { MeQueryItem } from '@/components'
 import isPermission from '@/utils/permissionsTool.js'
-// 定义组件名
+// 定义组件名称。设置keepAlive需将组件的name设置成当前菜单的code。一定要这样写才可以切换页面时保存当前标签页的状态。
 defineOptions({ name: '${permissionCode}' })
 
 // 进入页面时执行
